# nicord

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs  server_connection.rs  sever_connection.rs
common/: Cargo.toml
common/src/: configs.rs  connection.rs  error.rs  framing.rs  id.rs  lib.rs  messages.rs  user.rs
macros/: Cargo.toml
macros/src/: lib.rs
minimals/: Cargo.toml
server/: Cargo.toml
server/mongodb/: docker-compose.yml
server/src/: authentication.rs  core.rs  handler.rs  main.rs  mongodb.rs  nc_server.rs  server_handler.rs  session.rs  user.rs
