[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
tokio = {version="1.34", features=["io-util", "net", "rt", "macros"]}
tokio-utils = "0.1"
log = "0.4"

macros = {path = "../macros/"}
