[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.34", features=["io-util", "net", "rt", "macros"]}
log = "0.4"
mongodb = "2.7"
env_logger = "0.10"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"

common = {path = "../common/"}
macros = {path = "../macros/"}
